<resources>
    <string name="app_name">Food Delivery App</string>
    <string name="start_text_1">Enjoy</string>
    <string name="start_text_2">Eating</string>
    <string name="start_text_3">All the delicious food on your phone</string>
    <string name="get_started">Get Started</string>
    <string name="hi_name">Hi Leonardo</string>
    <string name="name_example">Leonardo</string>
    <string name="search_and_order">Search and Order</string>
    <string name="search_your_favorite_food">Search your Favorite Food</string>
    <string name="categories">Categories</string>
    <string name="recommended">Recommended</string>
    <string name="pizza">Pizza</string>
    <string name="foods">Foods</string>
    <string name="price">$13.10</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="info">Info</string>
    <string name="show_info">Show info</string>
    <string name="description">LLịch sử của pizza bắt nguồn từ thời cổ đại, khi nhiều nền văn hóa cổ đại làm ra bánhLịch sử của pizza bắt nguồn từ thời cổ đại, khi nhiều nền văn hóa cổ đại làm ra bánhLịch sử của pizza bắt nguồn từ thời cổ đại, khi nhiều nền văn hóa cổ đại làm ra bánhLịch sử của pizza bắt nguồn từ thời cổ đại, khi nhiều nền văn hóa cổ đại làm ra bánhịch sử của pizza bắt nguồn từ thời cổ đại, khi nhiều nền văn hóa cổ đại làm ra bánh mì dẹt với một lớp phủ bên trên. Họ hàng của pizza có lẽ là focaccia, một loại bánh mì dẹt của người La Mã tên là panis focacius,[1] được thêm vào một lớp phủ bên trên.[2] Pizza ngày nay được phát triển ở Napoli, khi người ta thêm cà chua vào món focaccia vào cuối thế kỉ 18.[cần dẫn nguồn]. Từ bánh pizza lần đầu tiên được ghi nhận vào năm 997 tại Gaeta[3] và liên tiếp ở nhiều vùng khác của Miền Trung và Nam Ý. Pizza được sử dụng chủ yếu trong nội địa nước Ý và được dùng bởi người di cư từ đó. Việc này đã thay đổi sau Thế chiến II, khi quân Đồng Minh đóng quân tại Ý và thưởng thức pizza cùng các món Ý khác.</string>
    <string name="total_price">Total Price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_cart">My cart</string>
    <string name="my_order_history">My order history</string>
    <string name="profile">Profile</string>
    <string name="item_total">Item Total</string>
    <string name="tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="type_discount">Type your discount</string>
    <string name="delivery_service">Delivery service</string>
    <string name="status">Status</string>
    <string name="total">Total</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="your_name">Your name</string>
    <string name="retype_password">Retype password</string>
    <string name="register_text">Don\'t have an account? Register now!</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="avatar">Avatar</string>
    <string name="link_avatar">Avatar</string>
    <string name="update">Update</string>
    <string name="check_out">Check out</string>
    <string name="date_example">30/04/2022</string>
    <string name="my_orders">My orders</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="number_example">10</string>
    <string name="date">Date</string>

</resources>