<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.foodinfo.FoodInfoActivity"
    android:orientation="vertical"
    android:background="@color/gray"
    android:paddingHorizontal="12dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/pizza"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_white"
        android:layout_marginTop="36dp"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizza"
            android:textSize="28dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/gray_pill">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="22dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingHorizontal="12dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/orange_pill">
                <TextView
                    android:id="@+id/btnFoodInfoDec"
                    style="@style/style_pill_button"
                    android:text="@string/minus"></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:background="@color/white"
                    android:textAlignment="center"
                    android:text="@string/one"/>
                <TextView
                    android:id="@+id/btnFoodInfoInc"
                    style="@style/style_pill_button"
                    android:text="@string/plus"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>