<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:orientation="vertical"
    tools:context=".ui.start.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#2C46D8"
        android:textSize="32dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="36dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/bg_white">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/user_icon"
                android:layout_marginRight="8dp"/>
            <EditText
                android:id="@+id/editTextLoginUsername"
                style="@style/style_input"
                android:textColorHint="@color/gray_text"
                android:hint="@string/username" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_white">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/lock_icon"
                android:layout_marginRight="8dp"/>
            <EditText
                android:id="@+id/editTextLoginPassword"
                style="@style/style_input"
                android:inputType="textPassword"
                android:textColorHint="@color/gray_text"
                android:hint="@string/password" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/primary_button"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnLoginToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textColor="@color/gray_text"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>
        <View
            android:layout_width="240dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/gray_text"/>
    </LinearLayout>


</LinearLayout>