<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/bg_white"
    android:orientation="horizontal"
    android:paddingVertical="12dp">

    <ImageView
        android:id="@+id/imgCartItemFood"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/pizza" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCartItemFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pizza"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/gray_pill"
            android:orientation="horizontal">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/orange_pill"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnCartItemDec"
                    style="@style/style_pill_button"
                    android:layout_marginTop="-4dp"
                    android:text="@string/minus"></TextView>

                <TextView
                    android:id="@+id/txtCartItemFoodAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/one"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btnCartItemInc"
                    style="@style/style_pill_button"
                    android:layout_marginTop="-4dp"
                    android:text="@string/plus"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/txtCartItemFoodAllPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:layout_marginVertical="4dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtCartItemFoodPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="12dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:layout_marginVertical="4dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>